# deta-learning

./: .gitignore  .replit  README.md  main.py  pyproject.toml
.deta/: prog_info  state
.github/workflows/: deploy-api.yml
api/: main.py  quotes.txt  requirements.txt
api/.deta/: prog_info  state
quotepage/: package-lock.json  package.json  svelte.config.js
quotepage/src/lib/: Quote.svelte
quotepage/src/routes/: index.svelte
