[tool.poetry]
name = "repl_python3_beta_deta-learning"
version = "0.1.0"
description = ""
authors = ["TheTrueCoderMan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
